--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "shell": "ts-node",
         "tsc": "tsc",
         "tsc:watch": "tsc --watch",
-        "test:runner": "export NODE_ENV=test; export POSTGRES_DATABASE=quala-test; ",
+        "test:runner": "export NODE_ENV=test; ",
         "test": "npm run test:unit && npm run test:integration",
         "test:unit": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$",
         "test:unit:watch": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$ --watch",
