--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ branches:
   only:
     - development
     - master
-before_install:
-  - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then npm i -g audit-ci && audit-ci -m; fi
+scripts:
+  - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then audit-ci --moderate; fi
+  - npm test
