--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ branches:
     - development
     - master
 script:
-  - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then npm audit-ci --moderate; fi
+  - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then npm run audit-ci --moderate; fi
   - npm lint
   - npm test
