--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.0.1",
     "description": "Authentication for JS",
     "dependencies": {
-        "esm": "^3.2.22"
+        "audit-ci": "^1.7.0",
+        "esm": "^3.2.22",
+        "typescript": "^3.4.5"
     },
     "devDependencies": {
         "@types/chai": "^4.1.7",
@@ -11,15 +13,13 @@
         "@types/node": "^11.13.8",
         "@types/sinon": "^7.0.11",
         "@types/sinon-chai": "^3.2.2",
-        "audit-ci": "^1.7.0",
         "chai": "^4.2.0",
         "faker": "^4.1.0",
         "jest": "^24.7.1",
         "sinon": "^7.3.2",
         "sinon-chai": "^3.3.0",
         "ts-jest": "^24.0.2",
-        "ts-node": "^8.1.0",
-        "typescript": "^3.4.5"
+        "ts-node": "^8.1.0"
     },
     "scripts": {
         "shell": "ts-node",
