Travis - audit ci

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,7 +18,7 @@ parserOptions:
   allowImportExportEverywhere: false
 
 rules: 
-  no-console: 'warn'
+  no-console: 'error'
   comma-dangle: ['error', 'always-multiline']
   indent: ['error', 4]
   no-unused-vars: ['error', {'args': 'none'}]
