--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/evenset/even-auth.git"
+        "url": "https://github.com/evenset/even-auth/"
     },
     "keywords": [
         "authentication",
