--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "even-auth",
+    "name": "safe-auth",
     "version": "0.0.1",
     "description": "Authentication for JS",
     "dependencies": {
@@ -34,7 +34,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/evenset/even-auth/"
+        "url": "https://github.com/evenset/safe-auth"
     },
     "keywords": [
         "authentication",
@@ -46,9 +46,9 @@
     "author": "Evenset",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/evenset/even-auth/issues"
+        "url": "https://github.com/evenset/safe-auth/issues"
     },
-    "homepage": "https://github.com/evenset/even-auth#readme",
+    "homepage": "https://github.com/evenset/safe-auth#readme",
     "main": "build/index.js",
     "module": "build/main.js"
 }
