--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
         "@types/node": "^11.13.8",
         "@types/sinon": "^7.0.11",
         "@types/sinon-chai": "^3.2.2",
+        "@typescript-eslint/eslint-plugin": "^1.7.0",
+        "@typescript-eslint/parser": "^1.7.0",
         "chai": "^4.2.0",
+        "eslint": "^5.16.0",
         "faker": "^4.1.0",
         "jest": "^24.7.1",
         "sinon": "^7.3.2",
         "sinon-chai": "^3.3.0",
         "ts-jest": "^24.0.2",
-        "ts-node": "^8.1.0"
+        "ts-node": "^8.1.0",
+        "typedoc": "^0.14.2"
     },
     "scripts": {
         "shell": "ts-node",
@@ -30,7 +34,8 @@
         "test:unit:watch": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$ --watch",
         "test:integration": "exit 0",
         "lint": "eslint --ext ts ./src",
-        "audit-ci": "audit-ci"
+        "audit-ci": "audit-ci",
+        "tsdoc": "tsdoc"
     },
     "repository": {
         "type": "git",
