--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -31,3 +31,4 @@ rules:
   arrow-spacing: 'error'
   space-in-parens: ['error']
   '@typescript-eslint/no-unused-vars': ['error', {'args': 'none'}]
+  '@typescript-eslint/no-explicit-any': 0
