--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "description": "Authentication for JS",
     "dependencies": {
         "esm": "^3.2.22",
+        "jest-each": "^24.8.0",
         "typescript": "^3.4.5"
     },
     "devDependencies": {
         "@types/chai": "^4.1.7",
+        "@types/faker": "^4.1.5",
         "@types/jest": "^24.0.12",
         "@types/node": "^11.13.8",
         "@types/sinon": "^7.0.11",
