--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "tsc:watch": "tsc --watch",
         "test:runner": "export NODE_ENV=test; ",
         "test": "npm run test:unit && npm run test:integration",
-        "test:unit": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$",
-        "test:unit:watch": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$ --watch",
+        "test:unit": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$ --coverage",
+        "test:unit:watch": "npm run test:runner -- jest --verbose --testRegex .*\\.test\\.ts$ --coverage --watch",
         "test:integration": "exit 0",
         "lint": "eslint --ext ts ./src",
         "audit-ci": "audit-ci",
