--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         // "composite": true,                     /* Enable project compilation */
         "incremental": true,                   /* Enable incremental compilation */
         "tsBuildInfoFile": "./.ts_incremental_build_info.json",               /* Specify file to store incremental compilation information */
-        // "removeComments": true,                /* Do not emit comments to output. */
+        "removeComments": false,                /* Do not emit comments to output. */
         // "noEmit": true,                        /* Do not emit outputs. */
         // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
         // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
@@ -58,6 +58,15 @@
         /* Experimental Options */
         "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators. */
         "emitDecoratorMetadata": true             /* Enables experimental support for emitting type metadata for decorators. */
+    },
+    "typedocOptions": {
+        "mode": "modules",
+        "out": "docs",
+        "excludeNotExported": true,
+        "name": "safe-auth",
+        "readme": "https://github.com/evenset/safe-auth#readme",
+        "toc": true,
+        "exclude": "**/*.test.ts"
     },
     "include": ["src/**/*"]
 }
