--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ node_js:
   - '10'
   - '11'
   - '12'
-branches:
-  only:
-    - development
-    - master
 
 cache:
   directories:
@@ -15,7 +11,8 @@ cache:
 
 before_script:
   - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then npm install audit-ci && npm run audit-ci --moderate; fi
-  - npm install eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser
+  - npm install eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser codecov
 script:
   - npm run lint
   - npm test
+  - codecov -f coverage/*.json
