--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
     "name": "safe-auth",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "General purpose authentication solution for Node.js",
-    "dependencies": {
-        "esm": "^3.2.22",
-        "typescript": "^3.4.5"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@types/chai": "^4.1.7",
         "@types/chai-as-promised": "^7.1.0",
@@ -26,7 +23,8 @@
         "sinon-chai": "^3.3.0",
         "ts-jest": "^24.0.2",
         "ts-node": "^8.1.0",
-        "typedoc": "^0.14.2"
+        "typedoc": "^0.14.2",
+        "typescript": "^3.4.5"
     },
     "scripts": {
         "shell": "ts-node",
@@ -56,6 +54,8 @@
         "url": "https://github.com/evenset/safe-auth/issues"
     },
     "homepage": "https://github.com/evenset/safe-auth#readme",
-    "main": "build/index.js",
-    "module": "build/main.js"
+    "main": "lib/index.js",
+    "files": [
+        "lib"
+    ]
 }
